--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,13 @@ hr { /* this is a line element */
   margin-bottom: 1rem;
 }
 
+details {}
+
+summary {
+  color: #c23616;
+  padding: 0.5rem 1rem;
+}
+
 .dark-section {
   background-color: #7f8fa6;
   color: #f5f6fa;
